syntax = "proto3";

import "google/protobuf/struct.proto";
import "bscp.io/pkg/protocol/core/base/base.proto";

package pbgroup;

option go_package = "bscp.io/pkg/protocol/core/group;pbgroup";

// Group source resource reference: pkg/dal/table/group.go
message Group {
    uint32 id                       = 1;
    GroupSpec spec                  = 2;
    GroupAttachment attachment      = 3;
    pbbase.Revision revision = 4;
}

// GroupSpec source resource reference: pkg/dal/table/group.go
message GroupSpec {
    string name                     = 1;
    string mode                     = 2;
    google.protobuf.Struct selector = 3;
    string uid                      = 4;
}

// GroupAttachment source resource reference: pkg/dal/table/group.go
message GroupAttachment {
    uint32 biz_id                   = 1;
    uint32 app_id                   = 2;
    uint32 group_category_id        = 3;
}
